syntax = "proto3";

package wallet;

// Define the Wallet service
service WalletService {
  // Create a new wallet
  rpc CreateWallet (CreateWalletRequest) returns (CreateWalletResponse);
}

// Request message for creating a wallet
message CreateWalletRequest {
  string user_id = 1;         // UUID of the user
  string currency = 2;        // Asset symbol (e.g., BTC, ETH)
  string wallet_type = 3;     // hot, cold, deposit, withdrawal
  string network = 4;         // Blockchain network (e.g., Ethereum, BSC)
  optional string wallet_address = 5; // Auto-generated or provided address
}

// Response message for wallet creation
message CreateWalletResponse {
  string wallet_id = 1; // Unique wallet identifier (UUID)
  string wallet_address = 2;   // Generated wallet address
  string status = 3;    // active, frozen, disabled
}
